--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ flutter:
       - assets/warning.png
       - assets/checked.png
       - assets/unchecked.png
+      - assets/Avenir-Light.ttf
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
